// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarHeader renders the SideBarHeader with a Sample Title 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  >
    Sample Title
  </MenuHeader>
</MenuItem>
`;

exports[`SideBarHeader renders the SideBarHeader with props.title=  1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  />
</MenuItem>
`;

exports[`SideBarHeader renders the SideBarHeader with props.title='  1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  />
</MenuItem>
`;

exports[`SideBarHeader renders the SideBarHeader with props.title='' 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  />
</MenuItem>
`;

exports[`SideBarHeader renders the SideBarHeader with props.title=null  1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  />
</MenuItem>
`;

exports[`SideBarHeader renders the SideBarHeader with props.title=null  2`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  />
</MenuItem>
`;
